--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,8 @@
 .flex-container{
   display: flex;
-  align-content: space-around;
-  flex-flow: row wrap;
-  justify-content: space-around;
-
+  align-content: space-evenly;
+  justify-content: space-evenly;
+  flex-wrap: wrap
 }
 
 #box{
@@ -16,7 +15,8 @@
 
 #box {
   position: relative;
-  width: 50%;
+  width: 600px;
+  height: auto
 }
 
 .image {
